Fix squished author profile image

--- a/styles/_comments.scss
+++ b/styles/_comments.scss
@@ -63,6 +63,7 @@
         clear: both;
 
         .avatar {
+            flex-shrink: 0;
             margin-right: 1rem;
 
             svg {
