--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -32,13 +32,12 @@ body {
     border-top: 2px solid black;
 
     .bio-image {
-        flex-grow: 1;
-        margin: 1rem 1rem 0 0;
-        width: 5rem;
+        flex-shrink: 0;
 
         img {
             width: 3rem;
             height: 3rem;
+            margin: 1rem 1rem 0 0;
             border-radius: 0.5rem;
         }
     }
